feat: just use jni rather than jextract